# inventory_mgmt

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  test.db
app/: crud.py  database.py  main.py  models.py
app/routes/: products.py
docs/: docker commands
